Added liquibase integration, hibernate inheritance, removed entity validation, added JwtException modified Spring dependency injection, transferred keystore password to environment variables, other minor fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost/questionnaire
+spring.datasource.url=jdbc:postgresql://localhost/questionnaire?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 
 
 spring.mail.host=smtp.mailtrap.io
