Implemented API to add form fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=9609206d2f340c
+spring.mail.password=d459b9212d3f2c
 spring.mail.protocol=smtp
