--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+
+
 		<dependency>
 		<groupId>javax.validation</groupId>
 		<artifactId>validation-api</artifactId>
@@ -120,6 +122,31 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<propertyFile>${project.build.outputDirectory}/liquibase-maven-plugin.properties</propertyFile>
+					<systemProperties>
+						<user.name>your_liquibase_username</user.name>
+					</systemProperties>
+					<logging>info</logging>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.liquibase.ext</groupId>
+						<artifactId>liquibase-hibernate5</artifactId>
+						<version>3.6</version>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+						<version>2.2.0.RELEASE</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
