--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost/questionnaire?createDatabaseIf
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=9609206d2f340c
-spring.mail.password=d459b9212d3f2c
+spring.mail.username=
+spring.mail.password=
 spring.mail.protocol=smtp
