--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
 - changeSet:
-    id: 1611429366303-1
+    id: 1611658706438-1
     author: unvisiblee (generated)
     changes:
     - createTable:
@@ -22,8 +22,7 @@ databaseChangeLog:
             type: VARCHAR(255)
         - column:
             constraints:
-                nullable: false
-                unique: true
+              nullable: false
             name: label
             type: VARCHAR(255)
         - column:
@@ -36,24 +35,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: field
 - changeSet:
-    id: 1611429366303-2
-    author: unvisiblee (generated)
-    changes:
-    - createTable:
-        columns:
-        - column:
-            constraints:
-              nullable: false
-              primaryKey: true
-              primaryKeyName: form_pkey
-            name: id
-            type: BIGINT
-        - column:
-            name: user_id
-            type: BIGINT
-        tableName: form
-- changeSet:
-    id: 1611429366303-4
+    id: 1611658706438-2
     author: unvisiblee (generated)
     changes:
     - createTable:
@@ -70,8 +52,7 @@ databaseChangeLog:
             type: TIMESTAMP WITHOUT TIME ZONE
         - column:
             constraints:
-                nullable: false
-                unique: true
+              nullable: false
             name: email
             type: VARCHAR(255)
         - column:
@@ -85,7 +66,7 @@ databaseChangeLog:
             type: VARCHAR(255)
         - column:
             constraints:
-                nullable: false
+              nullable: false
             name: password
             type: VARCHAR(255)
         - column:
@@ -93,13 +74,12 @@ databaseChangeLog:
             type: VARCHAR(255)
         - column:
             constraints:
-                nullable: false
-                unique: true
+              nullable: false
             name: username
             type: VARCHAR(255)
         tableName: usr
 - changeSet:
-    id: 1611429366303-5
+    id: 1611658706438-3
     author: unvisiblee (generated)
     changes:
     - createTable:
@@ -122,7 +102,7 @@ databaseChangeLog:
             type: BIGINT
         tableName: verification_token
 - changeSet:
-    id: 1611429366303-6
+    id: 1611658706438-4
     author: unvisiblee (generated)
     changes:
     - createTable:
@@ -139,7 +119,133 @@ databaseChangeLog:
             type: BIGINT
         tableName: user_forms
 - changeSet:
-    id: 1611429366303-10
+    id: 1611658706438-5
+    author: unvisiblee (generated)
+    changes:
+    - createTable:
+        columns:
+        - column:
+            constraints:
+              nullable: false
+              primaryKey: true
+              primaryKeyName: form_pkey
+            name: id
+            type: BIGINT
+        - column:
+            name: user_id
+            type: BIGINT
+        tableName: form
+- changeSet:
+    id: 1611658706438-6
+    author: unvisiblee (generated)
+    changes:
+    - createTable:
+        columns:
+        - column:
+            constraints:
+              nullable: false
+              primaryKey: true
+              primaryKeyName: response_pkey
+            name: id
+            type: BIGINT
+        - column:
+            name: form_id
+            type: BIGINT
+        tableName: response
+- changeSet:
+    id: 1611658706438-7
+    author: unvisiblee (generated)
+    changes:
+    - createTable:
+        columns:
+        - column:
+            constraints:
+              nullable: false
+              primaryKey: true
+              primaryKeyName: response_for_field_pkey
+            name: id
+            type: BIGINT
+        - column:
+            name: field_id
+            type: BIGINT
+        - column:
+            name: response_id
+            type: BIGINT
+        - column:
+            name: content
+            type: VARCHAR(255)
+        tableName: response_for_field
+- changeSet:
+    id: 1611658706438-8
+    author: unvisiblee (generated)
+    changes:
+    - createTable:
+        columns:
+        - column:
+            constraints:
+              nullable: false
+            name: field_id
+            type: BIGINT
+        - column:
+            name: options
+            type: VARCHAR(255)
+        tableName: field_options
+- changeSet:
+    id: 1611658706438-9
+    author: unvisiblee (generated)
+    changes:
+    - addUniqueConstraint:
+        columnNames: label
+        constraintName: field_label_key
+        tableName: field
+- changeSet:
+    id: 1611658706438-10
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: field_id
+        baseTableName: response_for_field
+        constraintName: fkhdji5715ojgjmsf8v0o5g8o8t
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: field
+        validate: true
+- changeSet:
+    id: 1611658706438-11
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: field_id
+        baseTableName: field_options
+        constraintName: fkk6550cavkxasmhcxki1gw44gr
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: field
+        validate: true
+- changeSet:
+    id: 1611658706438-12
+    author: unvisiblee (generated)
+    changes:
+    - addUniqueConstraint:
+        columnNames: email
+        constraintName: usr_email_key
+        tableName: usr
+- changeSet:
+    id: 1611658706438-13
+    author: unvisiblee (generated)
+    changes:
+    - addUniqueConstraint:
+        columnNames: username
+        constraintName: usr_username_key
+        tableName: usr
+- changeSet:
+    id: 1611658706438-14
     author: unvisiblee (generated)
     changes:
     - addForeignKeyConstraint:
@@ -154,7 +260,7 @@ databaseChangeLog:
         referencedTableName: usr
         validate: true
 - changeSet:
-    id: 1611429366303-11
+    id: 1611658706438-15
     author: unvisiblee (generated)
     changes:
     - addForeignKeyConstraint:
@@ -169,22 +275,7 @@ databaseChangeLog:
         referencedTableName: usr
         validate: true
 - changeSet:
-    id: 1611429366303-12
-    author: unvisiblee (generated)
-    changes:
-    - addForeignKeyConstraint:
-        baseColumnNames: forms_id
-        baseTableName: user_forms
-        constraintName: fkpfoe95aabkdxf1nw15bns83po
-        deferrable: false
-        initiallyDeferred: false
-        onDelete: NO ACTION
-        onUpdate: NO ACTION
-        referencedColumnNames: id
-        referencedTableName: form
-        validate: true
-- changeSet:
-    id: 1611429366303-13
+    id: 1611658706438-16
     author: unvisiblee (generated)
     changes:
     - addUniqueConstraint:
@@ -192,22 +283,7 @@ databaseChangeLog:
         constraintName: uk_odf0xt9xwvcvvsydvhvxthw1g
         tableName: user_forms
 - changeSet:
-    id: 1611429366303-14
-    author: unvisiblee (generated)
-    changes:
-    - addForeignKeyConstraint:
-        baseColumnNames: form_id
-        baseTableName: field
-        constraintName: fkbmb5pgl0uv4s9vakn9w5y7ko8
-        deferrable: false
-        initiallyDeferred: false
-        onDelete: NO ACTION
-        onUpdate: NO ACTION
-        referencedColumnNames: id
-        referencedTableName: form
-        validate: true
-- changeSet:
-    id: 1611429366303-15
+    id: 1611658706438-17
     author: unvisiblee (generated)
     changes:
     - addForeignKeyConstraint:
@@ -222,7 +298,67 @@ databaseChangeLog:
         referencedTableName: usr
         validate: true
 - changeSet:
-    id: 1611429366303-16
+    id: 1611658706438-18
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: form_id
+        baseTableName: response
+        constraintName: fkocqyk9kemf4uahjxuoctgdmia
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: form
+        validate: true
+- changeSet:
+    id: 1611658706438-19
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: response_id
+        baseTableName: response_for_field
+        constraintName: fkh37i44ijj428io838ruocoslj
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: response
+        validate: true
+- changeSet:
+    id: 1611658706438-20
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: form_id
+        baseTableName: field
+        constraintName: fkbmb5pgl0uv4s9vakn9w5y7ko8
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: form
+        validate: true
+- changeSet:
+    id: 1611658706438-21
+    author: unvisiblee (generated)
+    changes:
+    - addForeignKeyConstraint:
+        baseColumnNames: forms_id
+        baseTableName: user_forms
+        constraintName: fkpfoe95aabkdxf1nw15bns83po
+        deferrable: false
+        initiallyDeferred: false
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: form
+        validate: true
+- changeSet:
+    id: 1611658706438-22
     author: unvisiblee (generated)
     changes:
     - createSequence:
