--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost/questionnaire?createDatabaseIf
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 spring.mail.host=smtp.mailtrap.io
