--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.password=123
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
-
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=
 spring.mail.password=
 spring.mail.protocol=smtp
+
+questionnaire.keystore.password=${KEYSTORE_PASS:secret}
