--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=9609206d2f340c
+spring.mail.password=d459b9212d3f2c
 spring.mail.protocol=smtp
 
 questionnaire.keystore.password=${KEYSTORE_PASS:secret}
