--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.mail.password=d459b9212d3f2c
 spring.mail.protocol=smtp
 
 questionnaire.keystore.password=${KEYSTORE_PASS:secret}
+questionnaire.frontend.url=http://localhost:4200
 
